myK8S/karakeep/karakeep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
  template:
    metadata:
      labels:
        app: karakeep
    spec:
      containers:
      - name: karakeep
        image: ghcr.io/karakeep-app/karakeep:latest
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            memory: 1536Mi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: karakeep-storage
          mountPath: /data
      volumes:
      - name: karakeep-storage
        persistentVolumeClaim:
          claimName: karakeep-web-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-svc
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: karakeep
  ports:
  - port: 3000
