myK8S/karakeep/meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v1.11.1
        resources:
          requests:
            cpu: 50m
            memory: 256Mi
          limits:
            memory: 768Mi
        volumeMounts:
        - mountPath: /meili_data
          name: meili-storage
      volumes:
      - name: meili-storage
        persistentVolumeClaim:
          claimName: karakeep-meili-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: meilisearch
  ports:
  - port: 7700
